Add cloudflare web analytics

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,11 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<script
+			defer
+			src="https://static.cloudflareinsights.com/beacon.min.js"
+			data-cf-beacon='{"token": "0ac3349f98b54d8c8877b8059d089caf"}'
+		></script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
