--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-GB">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<script
+			defer
+			src="https://analytics.helbling.uk/script.js"
+			data-website-id="497d34f6-c015-475d-aae2-dd57bf53f00f"
+		></script>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
