Only load umami in prod

--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-GB">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<script
-			defer
-			src="https://analytics.helbling.uk/script.js"
-			data-website-id="f303cb13-d1aa-42c0-ab5b-77937e5a1daa"
-		></script>
 
 		%sveltekit.head%
 	</head>
